--- a/packages/com.sonosthesia.target/Editor/Sonosthesia.Target.Editor.asmdef
+++ b/packages/com.sonosthesia.target/Editor/Sonosthesia.Target.Editor.asmdef
@@ -1,13 +1,12 @@
 {
-    "name": "Sonosthesia.Trajectory.Editor",
-    "rootNamespace": "Sonosthesia.Trajectory.Editor",
+    "name": "Sonosthesia.Target.Editor",
+    "rootNamespace": "Sonosthesia.Target.Editor",
     "references": [
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:eda0e54ec5f2644fe9c828d88900f12b",
+        "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:0e73a958ea93c4999aae301d99219c62",
-        "GUID:826a2c31a797146b196ea48de4724160",
-        "GUID:da4dcb349cd2457b9de2fe9f9ea29a3d"
+        "GUID:da4dcb349cd2457b9de2fe9f9ea29a3d",
+        "GUID:1f7670743f37b4db48eea5bc06ad4e65"
     ],
     "includePlatforms": [
         "Editor"
