--- a/packages/com.sonosthesia.target/Runtime/Sonosthesia.Target.asmdef
+++ b/packages/com.sonosthesia.target/Runtime/Sonosthesia.Target.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Sonosthesia.Target",
-    "rootNamespace": "",
+    "rootNamespace": "Sonosthesia.Target",
     "references": [
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
