--- a/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
+++ b/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
@@ -10,7 +10,8 @@
         "GUID:f09d8d2cfc85540a095af5db6fd137f0",
         "GUID:e34cfbf594f6143eca45627dd2ac29fe",
         "GUID:00053512b7993443db285a1ae1060dfd",
-        "GUID:1fd512b3b6c091f43bedec2c48831e94"
+        "GUID:1fd512b3b6c091f43bedec2c48831e94",
+        "GUID:2c48158b2e03846379768d3cfe369611"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
