--- a/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
+++ b/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
@@ -11,7 +11,8 @@
         "GUID:e34cfbf594f6143eca45627dd2ac29fe",
         "GUID:00053512b7993443db285a1ae1060dfd",
         "GUID:1fd512b3b6c091f43bedec2c48831e94",
-        "GUID:2c48158b2e03846379768d3cfe369611"
+        "GUID:2c48158b2e03846379768d3cfe369611",
+        "GUID:c457092a10a0ce546b4a27eeadca91c6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
